crates/speedrun/src/snapshots/speedrun__help__tests__snapshot_minimum_15x5.snap
---
source: crates/speedrun/src/help.rs
expression: output
---
┌ Keybindings ┐
│ Playback    │
│   Space     │
│   + / =     │
└─────────────┘
